--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -31,7 +31,7 @@ This Scenario plays out over 8 Rounds.
   \item A Few Halberdiers, a Few Marksmen
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, Citadel
+\textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
 \subsection*{\MakeUppercase{AI Hero setup}}
 
@@ -226,7 +226,7 @@ It was a trap.
 The necromancer and his strongest forces were not there, and Catherine would have to fight her way out from under a crush of undead, wasting precious time and lives.
 
 \begin{itemize}
-  \item \textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \bronze\ neutral Zombies and Skeletons.}
+  \item \textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \svg{bronze} neutral Zombies and Skeletons.}
   \item \textcolor{darkcandyapplered}{Play ``Cloak of the Undead King IV'' and ``Cloak of the Undead King VI'' onto the packs of Zombies and Skeletons, respectively.}
   \item \textcolor{darkcandyapplered}{Remove the AI Might and Magic Deck from the game, the undead fight on their own.}
 \end{itemize}
