--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -38,7 +38,7 @@ This Scenario plays out over 14 Rounds.
   \item A Pack of Cerebri
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling, City Hall, Citadel
+\textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, City Hall, Citadel
 
 \textbf{Bonus:} Gain a War Machine of your choice.
 
@@ -244,7 +244,7 @@ They are fools to think these will help them overcome our Kreegan fortress.
       \darkcell{Enemy} & \darkcell{Units} & \darkcell{AI Deck} & \darkcell{Artifacts/Abilities} \\
       \darkcellleft[2.8]{Rampart Charging Army \#1}
       & \lightcellleft[2.8]{Few Unicorns\\Pack of Pegasi\\Pack of Elves\\Pack of Dwarves\\Few Centaurs}
-      & \makebox[129pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{3~×~Might \svg{might-yellow} Card\\2~×~Skill \svg{skill-yellow} Card \\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}}
+      & \makebox[129pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{3~×~Might \svg[12]{might-yellow} Card\\2~×~Skill \svg{skill-yellow} Card \\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}}
       & \makebox[147pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}} \\
       \darkcellleft[2.8]{Castle Charging Army \#1}
       & \lightcellleft[2.8]{Few Champions\\Pack of Zealots\\Pack of Griffins\\Pack of Elves\\Pack of Marksmen}
@@ -260,7 +260,7 @@ They are fools to think these will help them overcome our Kreegan fortress.
       & \\
       \darkcellleft[4.4]{Final Charging Army}
       & \lightcellleft[4.4]{Few Archangels\\Pack of Unicorns\\Pack of Champions\\Pack of Zealots\\Pack of Griffins\\Ballista War Machine}
-      & \lightcellleft[4.4]{3~×~Might \svg{might-yellow} Card\\3~×~Skill \svg{skill-yellow} Card}
+      & \lightcellleft[4.4]{3~×~Might \svg[12]{might-yellow} Card\\3~×~Skill \svg{skill-yellow} Card}
     & \lightcellleft[4.4]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\1~×~Ballistics \textit{(Basic effect)}\\1~×~First~Aid \textit{(Expert effect)}} \\ \end{tabularx}
   }
 \vspace*{-5em}
