--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -37,7 +37,7 @@ This Scenario plays out over 13 Rounds.
   \item A Few Magogs
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, City Hall
+\textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
@@ -68,7 +68,7 @@ This Scenario plays out over 13 Rounds.
     \end{itemize}
   \item \textbf{AI Deck:}
     \begin{itemize}
-      \item 1 × Might \svg{might} Card
+      \item 1 × Might \svg[12]{might} Card
       \item 2 × Magic \svg{magic} Card
       \item 1 × Skill \svg{skill} Card
     \end{itemize}
