--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -34,7 +34,7 @@ This Scenario plays out over 16 Rounds.
   \item A Pack of Familiars
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling
+\textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
@@ -59,7 +59,7 @@ This Scenario plays out over 16 Rounds.
     \end{itemize}
     \item \textbf{AI Deck:}
     \begin{itemize}
-        \item 5 × Might \svg{might} Card
+        \item 5 × Might \svg[12]{might} Card
         \item 1 × Magic \svg{magic} Card
         \item 3 × Skill \svg{skill} Card
     \end{itemize}
@@ -79,7 +79,7 @@ This Scenario plays out over 16 Rounds.
        Neutral Army one Level higher than your Hero Level (Max Level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
     \item \textbf{AI Deck:}
     \begin{itemize}
-        \item 2 × \svg{might} Might Card
+        \item 2 × \svg[12]{might} Might Card
         \item 2 × \svg{magic} Magic Card
     \end{itemize}
     \item \textbf{Spells:}
@@ -98,7 +98,7 @@ Take the following Map Tiles and set them up as shown in the Scenario map layout
   \item 1 × Castle (S3)
 \end{itemize}
 
-\textbf{3 × Far (II--III) Map Tile}
+\textbf{6 × Far (II--III) Map Tile}
 \begin{itemize}
   \item 1 × Castle (F3)
   \item 1 × Rampart (F10)
@@ -108,7 +108,7 @@ Take the following Map Tiles and set them up as shown in the Scenario map layout
   \item 1 × Necropolis (choose from: F4, \#F6, F7)
 \end{itemize}
 
-\textbf{2 × Near (IV--V) Map Tile}
+\textbf{4 × Near (IV--V) Map Tile}
 \begin{itemize}
   \item 2 × Castle (N3, choose from: \#N3, N6)
   \item 1 × Rampart (N8)
