--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -24,10 +24,10 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × Few \bronze\ Units with the \textit{highest} Recruitment cost
+  \item 2 × Few \svg{bronze} Units with the \textit{highest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling
+\textbf{Town Buildings:} \svg{bronze} Dwelling
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile
 
@@ -80,10 +80,10 @@ During this Scenario:
   \columnbreak
   \item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:
   \begin{itemize}
-    \item \textbf{Easy:} 1 × \azure\, 2 × \silver\, 1 × \bronze\
-    \item \textbf{Normal:} 1 × \azure\, 1 × \golden\, 2 × \silver\
-    \item \textbf{Hard:} 1 × \azure\, 3 × \golden\
-    \item \textbf{Impossible:}  2 × \azure\, 2 × \golden\
+    \item \textbf{Easy:} 1 × \svg{azure}, 2 × \svg{silver}, 1 × \svg{bronze}
+    \item \textbf{Normal:} 1 × \svg{azure}, 1 × \svg{golden}, 2 × \svg{silver}
+    \item \textbf{Hard:} 1 × \svg{azure}, 3 × \svg{golden}
+    \item \textbf{Impossible:}  2 × \svg{azure}, 2 × \svg{golden}
   \end{itemize}
   \item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:
   \begin{itemize}
