--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -19,10 +19,10 @@ This Scenario is played over 16 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 3 × A Few \bronze\ Units
+  \item 3 × A Few \svg{bronze} Units
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling
+\textbf{Town Buildings:} \svg{bronze} Dwelling
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
