--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -23,11 +23,11 @@ This Scenario is played over 14 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \bronze\ Units with the \textit{lowest} Recruitment cost
-  \item A Few \bronze\ Units with the \textit{highest} Recruitment cost
+  \item A Pack of \svg{bronze} Units with the \textit{lowest} Recruitment cost
+  \item A Few \svg{bronze} Units with the \textit{highest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, City Hall
+\textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile
 
@@ -108,6 +108,7 @@ During this Scenario:
 
 \begin{wrapfigure}{l}{0.3\textwidth}
   \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/azure_dragon.jpg}}
+  \vspace*{2\baselineskip}
 \end{wrapfigure}
 {
   \textbf{\MakeUppercase{Boss: Azure Dragon}}
@@ -155,20 +156,11 @@ During this Scenario:
     \centering
     \medskip
 
-    \let\origbronze\bronze
-    \let\origsilver\silver
-    \let\origgolden\golden
-    \let\origazure\azure
-    \renewcommand{\bronze}{\origbronze[20]}
-    \renewcommand{\silver}{\origsilver[20]}
-    \renewcommand{\golden}{\origgolden[20]}
-    \renewcommand{\azure}{\origazure[20]}
-
     \begin{tabularx}{0.95\linewidth}{XXXX}
-    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \darkcell{\raisebox{-.2\height}{\svg[20]{bronze}} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{silver}} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{golden}} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{azure}} \textbf{Impossible}}\\
     \lightcell[1.8]{No additional\\changes} &
     \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
     \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
@@ -181,6 +173,7 @@ During this Scenario:
 
 \begin{wrapfigure}{l}{0.3\textwidth}
   \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/crystal_dragon.jpg}}
+  \vspace*{\baselineskip}
 \end{wrapfigure}
 {
   \textbf{\MakeUppercase{Boss: Crystal Dragon}}
@@ -227,20 +220,11 @@ During this Scenario:
     \centering
     \medskip
 
-    \let\origbronze\bronze
-    \let\origsilver\silver
-    \let\origgolden\golden
-    \let\origazure\azure
-    \renewcommand{\bronze}{\origbronze[20]}
-    \renewcommand{\silver}{\origsilver[20]}
-    \renewcommand{\golden}{\origgolden[20]}
-    \renewcommand{\azure}{\origazure[20]}
-
     \begin{tabularx}{0.95\linewidth}{XXXX}
-    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \darkcell{\raisebox{-.2\height}{\svg[20]{bronze}} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{silver}} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{golden}} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{azure}} \textbf{Impossible}}\\
     \lightcell[2.8]{No additional\\changes} &
     \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
     \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Retaliation}} &
@@ -253,6 +237,7 @@ During this Scenario:
 
 \begin{wrapfigure}{l}{0.3\textwidth}
   \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/rust_dragon.jpg}}
+  \vspace*{\baselineskip}
 \end{wrapfigure}
 {
   \textbf{\MakeUppercase{Boss: Rust Dragon {\scriptsize Requires Fortress Expansion}}}
@@ -298,20 +283,11 @@ During this Scenario:
     \centering
     \medskip
 
-    \let\origbronze\bronze
-    \let\origsilver\silver
-    \let\origgolden\golden
-    \let\origazure\azure
-    \renewcommand{\bronze}{\origbronze[20]}
-    \renewcommand{\silver}{\origsilver[20]}
-    \renewcommand{\golden}{\origgolden[20]}
-    \renewcommand{\azure}{\origazure[20]}
-
     \begin{tabularx}{0.95\linewidth}{XXXX}
-    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \darkcell{\raisebox{-.2\height}{\svg[20]{bronze}} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{silver}} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{golden}} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{azure}} \textbf{Impossible}}\\
     \lightcell[2.5]{No additional\\changes} &
     \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 20} &
     \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32} &
@@ -324,6 +300,7 @@ During this Scenario:
 
 \begin{wrapfigure}{l}{0.28\textwidth}
   \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/faerie_dragon.jpg}}
+  \vspace*{\baselineskip}
 \end{wrapfigure}
 {
   \textbf{\MakeUppercase{Boss: Faerie Dragon {\scriptsize Requires Rampart Expansion}}}
@@ -377,20 +354,11 @@ During this Scenario:
     \centering
     \medskip
 
-    \let\origbronze\bronze
-    \let\origsilver\silver
-    \let\origgolden\golden
-    \let\origazure\azure
-    \renewcommand{\bronze}{\origbronze[20]}
-    \renewcommand{\silver}{\origsilver[20]}
-    \renewcommand{\golden}{\origgolden[20]}
-    \renewcommand{\azure}{\origazure[20]}
-
     \begin{tabularx}{0.95\linewidth}{XXXX}
-    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \darkcell{\raisebox{-.2\height}{\svg[20]{bronze}} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{silver}} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{golden}} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\svg[20]{azure}} \textbf{Impossible}}\\
     \lightcell[1.6]{No additional\\changes} &
     \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 18} &
     \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26} &
