--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} LAAMAKALA
+\textbf{Author:} Laamakala
 
 \textit{There is no honor — only victory or death. The weak will fall, the strong will fight, and only one will rule.}
 
@@ -19,11 +19,11 @@ This Scenario plays out over 8-10 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few cheapest \silver\ Units
-  \item A chosen Neutral \bronze\ Unit matching the player's Faction
+  \item A Few cheapest \svg{silver} Units
+  \item A chosen Neutral \svg{bronze} Unit matching the player's Faction
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, Mage Guild
+\textbf{Town Buildings:} \svg{bronze} Dwelling, Mage Guild
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
@@ -85,7 +85,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
   \darkcell[1.4]{-1/0}
     & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-yellow} Units gain -2 \svg{initiative-yellow}.}\\
   \darkcell[1.4]{-1/+1}
-    & \lightcell[1.4]{Scorching Earth – All \silver\ and \golden\ Units start Combat with 1 \svg{damage-yellow}.}\\
+    & \lightcell[1.4]{Scorching Earth – All \svg{silver} and \svg{golden} Units start Combat with 1 \svg{damage-yellow}.}\\
   \darkcell[1.4]{0/-1}
     & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-yellow} Units move one space less.}\\
   \darkcell[1.0]{0/0}
@@ -102,8 +102,8 @@ When any player first flags ``The Hill'', each player, including the one who fla
 }
 
 \begin{itemize}
-  \item After winning a Neutral Combat, you may sacrifice 2 \bronze\ Units to gain 1 \silver\ Unit you defeated.
-  \item When a Main Hero is defeated, at the start of that player's next turn, they may Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
+  \item After winning a Neutral Combat, you may sacrifice 2 \svg{bronze} Units to gain 1 \svg{silver} Unit you defeated.
+  \item When a Main Hero is defeated, at the start of that player's next turn, they may Empower any Statistic Card from their M\&M Deck, and Search (2) the \svg{silver} Neutral Deck.
 \end{itemize}
 
 \begin{center}
