--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -28,8 +28,8 @@ This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \bronze\ Units of your choice
-  \item A Few \bronze\ Units of your choice
+  \item A Pack of \svg{bronze} Units of your choice
+  \item A Few \svg{bronze} Units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} None
@@ -125,70 +125,61 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
     \textbf{Strength of Titans' Stronghold Armies}\\
     \bigskip
 
-    \let\origbronze\bronze
-    \let\origsilver\silver
-    \let\origgolden\golden
-    \let\origazure\azure
-    \renewcommand{\bronze}{\origbronze[12]}
-    \renewcommand{\silver}{\origsilver[12]}
-    \renewcommand{\golden}{\origgolden[12]}
-    \renewcommand{\azure}{\origazure[12]}
-
-    \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Easy} & \darkcell{Normal} & \darkcell{Hard} & \darkcell{Impossible}\\
+    \begin{tabularx}{0.98\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Easy} & \darkcell{Normal} & \darkcell{Hard} & \darkcell{Impossible}\\
     \darkcell[1.2]{1 player}
-      & \lightcell[1.2]{3\bronze 2\silver 1\golden 1\azure}
-      & \lightcell[1.2]{2\bronze 2\silver 2\golden 1\azure}
-      & \lightcell[1.2]{2\bronze 2\silver 2\golden 2\azure}
-      & \lightcell[1.2]{1\bronze 2\silver 2\golden 3\azure}\\
+      & \lightcell[1.2]{3\svg[12]{bronze} 2\svg[12]{silver} 1\svg[12]{golden} 1\svg[12]{azure}}
+      & \lightcell[1.2]{2\svg[12]{bronze} 2\svg[12]{silver} 2\svg[12]{golden} 1\svg[12]{azure}}
+      & \lightcell[1.2]{2\svg[12]{bronze} 2\svg[12]{silver} 2\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.2]{1\svg[12]{bronze} 2\svg[12]{silver} 2\svg[12]{golden} 3\svg[12]{azure}}\\
     \darkcell[1.2]{2 players}
-      & \lightcell[1.2]{5\bronze 5\silver 3\golden 1\azure}
-      & \lightcell[1.2]{4\bronze 5\silver 3\golden 2\azure}
-      & \lightcell[1.2]{2\bronze 5\silver 5\golden 3\azure}
-      & \lightcell[1.2]{1\bronze 5\silver 7\golden 4\azure}\\
+      & \lightcell[1.2]{5\svg[12]{bronze} 5\svg[12]{silver} 3\svg[12]{golden} 1\svg[12]{azure}}
+      & \lightcell[1.2]{4\svg[12]{bronze} 5\svg[12]{silver} 3\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.2]{2\svg[12]{bronze} 5\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure}}
+      & \lightcell[1.2]{1\svg[12]{bronze} 5\svg[12]{silver} 7\svg[12]{golden} 4\svg[12]{azure}}\\
     \darkcell[1.8]{3 players}
-      & \lightcell[1.8]{8\bronze 7\silver 4\golden 2\azure}
-      & \lightcell[1.8]{6\bronze 7\silver 5\golden 3\azure}
-      & \lightcell[1.8]{2\bronze 3\silver 4\golden 3\azure \linebreak
+      & \lightcell[1.8]{8\svg[12]{bronze} 7\svg[12]{silver} 4\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.8]{6\svg[12]{bronze} 7\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure}}
+      & \lightcell[1.8]{2\svg[12]{bronze} 3\svg[12]{silver} 4\svg[12]{golden} 3\svg[12]{azure} \linebreak
         Then\linebreak
-        2\bronze 4\silver 3\golden 2\azure}
-      & \lightcell[1.8]{1\bronze 3\silver 5\golden 3\azure \linebreak
+        2\svg[12]{bronze} 4\svg[12]{silver} 3\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.8]{1\svg[12]{bronze} 3\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure} \linebreak
         Then\linebreak
-        1\bronze 4\silver 5\golden 3\azure}\\
+        1\svg[12]{bronze} 4\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure}}\\
     \darkcell[1.8]{4 players}
-      & \lightcell[1.8]{10\bronze 10\silver\linebreak 6\golden 2\azure}
-      & \lightcell[1.8]{8\bronze 10\silver 6\golden 4\azure}
-      & \lightcell[1.8]{2\bronze 5\silver 5\golden 3\azure \linebreak
+      & \lightcell[1.8]{10\svg[12]{bronze} 10\svg[12]{silver}\linebreak 6\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.8]{8\svg[12]{bronze} 10\svg[12]{silver} 6\svg[12]{golden} 4\svg[12]{azure}}
+      & \lightcell[1.8]{2\svg[12]{bronze} 5\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure} \linebreak
         Then\linebreak
-        2\bronze 5\silver 5\golden 3\azure}
-      & \lightcell[1.8]{1\bronze 5\silver 7\golden 4\azure \linebreak
+        2\svg[12]{bronze} 5\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure}}
+      & \lightcell[1.8]{1\svg[12]{bronze} 5\svg[12]{silver} 7\svg[12]{golden} 4\svg[12]{azure} \linebreak
         Then\linebreak
-        1\bronze 5\silver 7\golden 4\azure}\\
+        1\svg[12]{bronze} 5\svg[12]{silver} 7\svg[12]{golden} 4\svg[12]{azure}}\\
     \darkcell[1.8]{5 players}
-      & \lightcell[1.8]{6\bronze 6\silver 4\golden 1\azure \linebreak
+      & \lightcell[1.8]{6\svg[12]{bronze} 6\svg[12]{silver} 4\svg[12]{golden} 1\svg[12]{azure} \linebreak
         Then\linebreak
-        7\bronze 6\silver 3\golden 2\azure}
-      & \lightcell[1.8]{5\bronze 6\silver 4\golden 2\azure \linebreak
+        7\svg[12]{bronze} 6\svg[12]{silver} 3\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.8]{5\svg[12]{bronze} 6\svg[12]{silver} 4\svg[12]{golden} 2\svg[12]{azure} \linebreak
         Then\linebreak
-        5\bronze 6\silver 4\golden 3\azure}
-      & \lightcell[1.8]{3\bronze 6\silver 6\golden 4\azure \linebreak
+        5\svg[12]{bronze} 6\svg[12]{silver} 4\svg[12]{golden} 3\svg[12]{azure}}
+      & \lightcell[1.8]{3\svg[12]{bronze} 6\svg[12]{silver} 6\svg[12]{golden} 4\svg[12]{azure} \linebreak
         Then\linebreak
-        3\bronze 6\silver 6\golden 4\azure}
-      & \lightcell[1.8]{1\bronze 6\silver 8\golden 6\azure \linebreak
+        3\svg[12]{bronze} 6\svg[12]{silver} 6\svg[12]{golden} 4\svg[12]{azure}}
+      & \lightcell[1.8]{1\svg[12]{bronze} 6\svg[12]{silver} 8\svg[12]{golden} 6\svg[12]{azure} \linebreak
         Then\linebreak
-        2\bronze 6\silver 8\golden 5\azure}\\
+        2\svg[12]{bronze} 6\svg[12]{silver} 8\svg[12]{golden} 5\svg[12]{azure}}\\
     \darkcell[1.8]{6 players}
-      & \lightcell[1.8]{8\bronze 8\silver 4\golden 1\azure \linebreak
+      & \lightcell[1.8]{8\svg[12]{bronze} 8\svg[12]{silver} 4\svg[12]{golden} 1\svg[12]{azure} \linebreak
         Then\linebreak
-        7\bronze 7\silver 5\golden 2\azure}
-      & \lightcell[1.8]{6\bronze 8\silver 4\golden 3\azure \linebreak
+        7\svg[12]{bronze} 7\svg[12]{silver} 5\svg[12]{golden} 2\svg[12]{azure}}
+      & \lightcell[1.8]{6\svg[12]{bronze} 8\svg[12]{silver} 4\svg[12]{golden} 3\svg[12]{azure} \linebreak
         Then\linebreak
-        6\bronze 7\silver 5\golden 3\azure}
-      & \lightcell[1.8]{3\bronze 8\silver 7\golden 5\azure \linebreak
+        6\svg[12]{bronze} 7\svg[12]{silver} 5\svg[12]{golden} 3\svg[12]{azure}}
+      & \lightcell[1.8]{3\svg[12]{bronze} 8\svg[12]{silver} 7\svg[12]{golden} 5\svg[12]{azure} \linebreak
         Then\linebreak
-      3\bronze 7\silver 8\golden 4\azure}
-      & \lightcell[1.8]{3\bronze 7\silver 11\golden 6\azure \linebreak
+      3\svg[12]{bronze} 7\svg[12]{silver} 8\svg[12]{golden} 4\svg[12]{azure}}
+      & \lightcell[1.8]{3\svg[12]{bronze} 7\svg[12]{silver} 11\svg[12]{golden} 6\svg[12]{azure} \linebreak
       Then\linebreak
-      3\bronze 8\silver 10\golden 6\azure}\\
+      3\svg[12]{bronze} 8\svg[12]{silver} 10\svg[12]{golden} 6\svg[12]{azure}}\\
     \end{tabularx}
   }
 \end{table*}
