--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -28,11 +28,11 @@ This Scenario plays out over 16 Rounds.
 
 \textbf{Starting Units:} One player takes 1, the other player takes 2 of the following: a Few Centaurs, a Few Elves, a Few Pegasi
 
-\textbf{Town Buildings:} \bronze\ Dwelling, Citadel
+\textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
 \textbf{Bonus:} One player receives one of the following:
 \begin{itemize}
-  \item Add Neutral \bronze\ Rogues to your Units.
+  \item Add Neutral \svg{bronze} Rogues to your Units.
   \item 6 \svg{gold}
   \item Add the Equestrian Gloves Artifact to your hand.
 \end{itemize}
