--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,13 +20,13 @@ This Scenario plays out over 13 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of chosen \bronze\ Units
+  \item A Pack of chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
   \item Each player may build the \svg{building_special_tent} building at a discount of 2 \svg{gold} and 2 \svg{building_materials}.
-  \item \bronze\ Dwelling and 2 \svg{gold} \textbf{or} \\ Mage Guild and 1 \svg{valuables}.
+  \item \svg{bronze} Dwelling and 2 \svg{gold} \textbf{or} \\ Mage Guild and 1 \svg{valuables}.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
