--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -21,12 +21,12 @@ This Scenario plays out over 6 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of cheapest \silver\ Units
+  \item A Few of cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item \svg{bronze} Dwelling
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -61,11 +61,11 @@ Players get VPs for:
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Build \silver\ dwelling for free. If you already had it, gain 2 VP.
+  \item Build \svg{silver} dwelling for free. If you already had it, gain 2 VP.
 \end{itemize}
 \textbf{\nth{5} Round:}
 \begin{itemize}
-  \item Build \golden\ dwelling for free. If you already had it, gain 3 VP.
+  \item Build \svg{golden} dwelling for free. If you already had it, gain 3 VP.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -76,8 +76,8 @@ Players get VPs for:
   \item Players do not lose gold for losing or retreating from any Combat.
   \item Secondary Heroes act as Main Heroes, with full Deck access and 3 \svg{movement}.
   \item After losing a Combat, the defeated Hero is moved to its starting Town.
-  \item After PvP Combat, both players gain their lost \bronze\ and \silver\ Units back.
-  \item Players may \svg{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
+  \item After PvP Combat, both players gain their lost \svg{bronze} and \svg{silver} Units back.
+  \item Players may \svg[8]{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
   \item ``The Hill'' Combat reward: 20 \svg{gold}.
   \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitable once per Faction.}
@@ -91,7 +91,7 @@ Players get VPs for:
   \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage}, it gains a Corrosion token. That token is removed when that Unit takes damage.
   \item Additional Trading Post actions:
   \begin{itemize}
-    \item You may Search (2) \svg{artifact} and \svg{pay_v2} 6 \svg{gold} for minor, 8 \svg{gold} for major, or 11 \svg{gold} for Relic.
+    \item You may Search (2) \svg{artifact} and \svg[8]{pay_v2} 6 \svg{gold} for minor, 8 \svg{gold} for major, or 11 \svg{gold} for Relic.
     \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
