--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Chosen Neutral \bronze\ Units from the closest starting player's Faction
+  \item 2 × Chosen Neutral \svg{bronze} Units from the closest starting player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:} Citadel
@@ -67,7 +67,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \end{itemize}
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item Each player may recruit one Neutral \silver\ Unit from their closest starting player's Faction for half its recruitment cost.
+  \item Each player may recruit one Neutral \svg{silver} Unit from their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
 \textbf{\nth{11} Round:}
 \begin{itemize}
