--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -22,13 +22,13 @@ This Scenario plays out over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \bronze\ Units with the \textit{highest} Recruitment cost
-  \item A Pack of \bronze\ Units with the \textit{lowest} Recruitment cost
+  \item A Few \svg{bronze} Units with the \textit{highest} Recruitment cost
+  \item A Pack of \svg{bronze} Units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item \svg{bronze} Dwelling
   \item Citadel
 \end{itemize}
 
@@ -85,7 +85,7 @@ During this Scenario:
   \item Travel between islands is not possible other than Obelisks; e.g. Dimension Door, Angel Wings, and similar effects may not be used to travel between islands.
   \item Place a Black Cube on all empty Fields on Treasure Island as Tiles are revealed. The first Hero to visit an empty Field with a Black Cube may remove the Black Cube in order to roll 1 \svg{treasure} or 1 \svg{resource}.
   \item The first time a Player defeats the Dragon Utopia in Neutral Combat, they may Recruit any defeated Neutral Unit for half its Recruitment cost. Place a Faction Cube on the Dragon Utopia to indicate Players that have taken this action.
-  \item Players may defend their Starting Town with their army when it is attacked regardless of where they are on the map. They may not use their Deck of Might and Magic unless they \svg{pay_v2} 15 \svg{gold}.
+  \item Players may defend their Starting Town with their army when it is attacked regardless of where they are on the map. They may not use their Deck of Might and Magic unless they \svg[8]{pay_v2} 15 \svg{gold}.
   \item If a Player's Town is captured by an Enemy Hero, the Player does not receive Resources during Resource Rounds unless they recapture their Town. They may take all other Town Actions as normal.
   \item If a Player captures an Enemy Player's Starting Town, treat it as a Settlement; you may gain the same bonus as capturing a Settlement, but may not use the Walls, Gate, or Arrow Tower Cards if defending that Field.
 \end{itemize}
