--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -24,10 +24,10 @@ Your mission is to slay all dragons in the area, both those guarding the Utopia 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few of the cheapest \bronze\ Units
+  \item 2 × Few of the cheapest \svg{bronze} Units
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, Citadel
+\textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II-III) Map Tile.
 
@@ -58,23 +58,23 @@ Randomly draw the following Neutral dragon Unit Cards into two \textbf{Dragon De
 
 \textbf{Easy:}
 \begin{itemize}
-  \item DU: 2 × \azure\
-  \item WD: 2 × \golden\ (+1 \golden\ if 3 players)
+  \item DU: 2 × \svg{azure}
+  \item WD: 2 × \svg{golden} (+1 \svg{golden} if 3 players)
 \end{itemize}
 \textbf{Normal:}
 \begin{itemize}
-  \item DU: 2 × \azure, 1 × \golden\
-  \item WD: 1 × \azure, 1 × \golden\ (+1 \golden\ if 3 players)
+  \item DU: 2 × \svg{azure}, 1 × \svg{golden}
+  \item WD: 1 × \svg{azure}, 1 × \svg{golden} (+1 \svg{golden} if 3 players)
 \end{itemize}
 \textbf{Hard:}
 \begin{itemize}
-  \item DU: 3 × \azure\
-  \item WD: 1 × \azure, 2 × \golden\ (+1 \golden\ if 3 players)
+  \item DU: 3 × \svg{azure}
+  \item WD: 1 × \svg{azure}, 2 × \svg{golden} (+1 \svg{golden} if 3 players)
 \end{itemize}
 \textbf{Impossible:}
 \begin{itemize}
-  \item DU: 3 × \azure, 1 × \golden\
-  \item WD: 2 × \azure, 1 × \golden\ (+1 \golden\ if 3 players)
+  \item DU: 3 × \svg{azure}, 1 × \svg{golden}
+  \item WD: 2 × \svg{azure}, 1 × \svg{golden} (+1 \svg{golden} if 3 players)
 \end{itemize}
 \columnbreak
 
