--- a/sections/random_scenario.tex
+++ b/sections/random_scenario.tex
@@ -233,16 +233,6 @@ Then, keeping the same order, place Far (II-III) Map Tiles, and finally Starting
 
 Choose your \textbf{starting conditions} and \textbf{Town strength}.
 
-\let\origbronze\bronze
-\let\origsilver\silver
-\let\origgolden\golden
-\let\origazure\azure
-\renewcommand{\bronze}{\origbronze[12]}
-\renewcommand{\silver}{\origsilver[12]}
-\renewcommand{\golden}{\origgolden[12]}
-\renewcommand{\azure}{\origazure[12]}
-
-
 \begin{table*}
   \hommtable[]{27}{
     \centering
@@ -252,9 +242,9 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
 
     \begin{tabularx}{0.99\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Stingy} & \darkcell{Fair} & \darkcell{Generous}\\
     \darkcell[1.4]{Army}
-      & \lightcellleft[1.4]{2 × Few cheapest \bronze\ Units}
-      & \lightcellleft[1.4]{Pack of cheap \bronze\ Units \linebreak Few chosen \bronze\ Units}
-      & \lightcellleft[1.4]{Pack of chosen \bronze\ Units \linebreak Few cheap \silver\ Units}\\
+      & \lightcellleft[1.4]{2 × Few cheapest \svg[12]{bronze} Units}
+      & \lightcellleft[1.4]{Pack of cheap \svg[12]{bronze} Units \linebreak Few chosen \svg[12]{bronze} Units}
+      & \lightcellleft[1.4]{Pack of chosen \svg[12]{bronze} Units \linebreak Few cheap \svg[12]{silver} Units}\\
     \darkcell[1.4]{Starting Resources}
       & \lightcellleft[1.4]{10 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}}
       & \lightcellleft[1.4]{16 \svg{gold}, 5 \svg{building_materials}, 1 \svg{valuables}}
@@ -274,9 +264,9 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
       & \lightcellleft[1.4]{15 \svg{gold}, 0 \svg{building_materials}, 1 \svg{valuables}}
       & \lightcellleft[1.4]{20 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}}\\
     \darkcell[2.0]{Town Buildings}
-      & \lightcellleft[2.0]{\bronze\ Dwelling}
-      & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall}
-      & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall \linebreak Citadel}\\
+      & \lightcellleft[2.0]{\svg[12]{bronze} Dwelling}
+      & \lightcellleft[2.0]{\svg[12]{bronze} Dwelling \linebreak City Hall}
+      & \lightcellleft[2.0]{\svg[12]{bronze} Dwelling \linebreak City Hall \linebreak Citadel}\\
     \end{tabularx}
   }
 \end{table*}
