--- a/templates/default.tex
+++ b/templates/default.tex
@@ -23,13 +23,13 @@ This Scenario is played over ... Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \bronze\...
-  \item A Pack \silver\...
-  \item \golden\
-  \item \azure\
+  \item A Few \svg{bronze}...
+  \item A Pack \svg{silver}...
+  \item \svg{golden}
+  \item \svg{azure}
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling...
+\textbf{Town Buildings:} \svg{bronze} Dwelling...
 
 \textbf{Map Tile Pool:} Each player takes X [random] Near/Far Map (A--B) Tiles...
 
