--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -122,7 +122,7 @@ During this Castle campaign Scenario, the following rules apply:
   \item Your Hero's maximum Level is 6.
   \item All buildings are unavailable, building is not possible.
   \item All neutral enemies fight using the Neutral Enemy Deck.
-  \item Each time you visit a Trading Post, draw the top Cards from the \bronze\ bronze, \silver\ silver, and \golden\ golden neutral enemy Decks.
+  \item Each time you visit a Trading Post, draw the top Cards from the \svg{bronze} bronze, \svg{silver} silver, and \svg{golden} golden neutral enemy Decks.
     You may recruit any, or all of them by paying their cost.
     Shuffle any un-hired ones back into their Decks.
   \item The Grail may be sold at a trading post for 30 \svg{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
@@ -215,7 +215,7 @@ She looked back at the ragtag group of forces she'd gathered and hoped it would 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Add a Few Archangels to your army.}
   \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.
-    If you choose not to, you may in the future by spending one \svg{movement} at this Obelisk.}
+    If you choose not to, you may in the future by spending one \svg{movement-red} at this Obelisk.}
 \end{itemize}
 
 
