--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -21,11 +21,11 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \bronze\ Units with the \textit{highest} Recruitment cost
-  \item A Pack of \bronze\ Units with the \textit{lowest} Recruitment cost
+  \item A Few \svg{bronze} Units with the \textit{highest} Recruitment cost
+  \item A Pack of \svg{bronze} Units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling
+\textbf{Town Buildings:} \svg{bronze} Dwelling
 
 \textbf{Map Tile Pool:} Each player takes 2 random Far (II--III) Map Tiles, one of which must contain a Settlement
 
@@ -89,9 +89,9 @@ During this Scenario:
     \end{enumerate}
     \item \textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:
     \begin{enumerate}
-      \item *\bronze\: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (4)} the Minor Artifact Deck.
-      \item *\silver\: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (3)} the Major Artifact Deck.
-      \item *\golden\: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \textbf{Search (2)} the \azure\ Unit Deck; you may Recruit one of these Units for half the cost (rounded down).
+      \item *\svg{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (4)} the Minor Artifact Deck.
+      \item *\svg{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (3)} the Major Artifact Deck.
+      \item *\svg{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \textbf{Search (2)} the \svg{azure} Unit Deck; you may Recruit one of these Units for half the cost (rounded down).
     \end{enumerate}
   \end{enumerate}
   \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
@@ -100,7 +100,7 @@ During this Scenario:
   \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.
   \item If a Unit Recruited at an Obelisk is defeated, remove it.
   \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.
-  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \azure\ Units.
+  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \svg{azure} Units.
   \item Whenever an Astrologers Proclaim or Event Card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event Card.
   \item Players can use their Deck of Might \& Magic when paying gold to defend their Faction Town.
   \item Ignore Combat encounters on the Field with the Grail.
