--- a/draft-scenarios/alliances/brothers_in_arms.tex
+++ b/draft-scenarios/alliances/brothers_in_arms.tex
@@ -22,17 +22,17 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Few of the cheapest \bronze\ Units
-  \item A Few of the cheapest \silver\ Units
+  \item A Few of the cheapest \svg{bronze} Units
+  \item A Few of the cheapest \svg{silver} Units
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling
+\textbf{Town Buildings:} \svg{bronze} Dwelling
 
 \textbf{Additional Starting bonus:}
 Choose one:
 \begin{itemize}
   \item Search (3) the Ability Deck
-  \item A Few \bronze\ Units of the second highest Recruitment cost
+  \item A Few \svg{bronze} Units of the second highest Recruitment cost
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes one random Far (II–III) Map Tile.
