--- a/draft-scenarios/alliances/gold_rush.tex
+++ b/draft-scenarios/alliances/gold_rush.tex
@@ -23,11 +23,11 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of chosen \bronze\ Units
-  \item A Few cheapest \silver\ Units
+  \item A Pack of chosen \svg{bronze} Units
+  \item A Few cheapest \svg{silver} Units
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, Citadel
+\textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
 \textbf{Map Tile Pool:} Each player takes 2 Far (II--III) Map Tiles.
 
