--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -20,13 +20,13 @@ This Scenario plays out over 15 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of chosen \bronze\ Units
-  \item A chosen Neutral \bronze\ Unit from the player's Faction
+  \item A Pack of chosen \svg{bronze} Units
+  \item A chosen Neutral \svg{bronze} Unit from the player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item \svg{bronze} Dwelling
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -84,7 +84,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \begin{itemize}
   \item The Blocked Field on the Map Tile in the center is not considered blocked.
   \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
-  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}.
+  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. Search (2) \svg[8]{skill}, \svg{spellpower} or \svg{artifact}.
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item \textbf{Astral Gate:} Cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to the Astral Gate on the Near Tile directly opposite the Center Tile. If that Tile is undiscovered, that player immediately discovers it.
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero, unless one of the players Surrenders or Retreats.
