--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -23,11 +23,11 @@ This Scenario is played over 8 Rounds, with up to 4 additional tie-breaking Roun
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × A Few cheapest \bronze\ Units
-  \item A Few cheapest \silver\ Units
+  \item 2 × A Few cheapest \svg{bronze} Units
+  \item A Few cheapest \svg{silver} Units
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling, Citadel, Mage Guild
+\textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, Citadel, Mage Guild
 
 \textbf{Map Tile Pool:} None
 
